--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
 </head>
 <body>
     <div class="clock">
-        <div class="vertical"></div>
-        <div class="horizontal"></div>
-        <div class="back-clock">
-            <h1>2: 30 : 40 pm</h1>
-            <h2>2 january 2025</h2>
-            <h3>Wednesday</h3>
-        </div>
+        <div class="second-hand"></div>
+        <div class="minute-hand"></div>
+        <div class="hour-hand"></div>
+
+
+        <div class="center"></div>
+
+
+      
     </div>
     
 
